cracion de pagina de inicio

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,100 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
+
+:root{
+  --green:#27ae60;
+  --black:#192a56;
+  --blue:rgb(11, 102, 222);
+  --light-color:#666;
+  --white:#e6e6e6;
+  --white-light:#fff;
+  --box-shadow:0 .5rem 1.5rem rgba(0,0,0,.1);
 }
 
-a {
-  color: inherit;
+/* font-family: 'Nunito Sans', sans-serif; */
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%; /* 1 rem = 10px; 10px/16px = 62.5% */
+  font-family: 'Nunito Sans', sans-serif;
+  overflow-x: hidden;
+  scroll-padding-top: 5.5rem;
+  scroll-behavior: smooth;
+}
+
+/*
+ @media only screen and (min-width: 37.5em) {
+      @content;
+    } //600px
+*/
+
+@media only screen and (max-width: 56.25em) {
+  html{
+    font-size: 50%; /* 1 rem = 8px, 8/16 = 50% */
+  }
+} /* 900px */
+
+@media only screen and (max-width: 75em) {
+  html{
+    font-size: 56.25%; /* 1 rem = 9px, 9/16 = 50% */
+  }
+} /* 1200px */
+
+@media only screen and (min-width: 112.5em) {
+  html{
+    font-size: 75%; /* 1rem = 12, 12/16 */    
+  }
+} /* 1800 */
+
+body {
+  box-sizing: border-box;
+  letter-spacing: 0.2rem;
+  background: white;
+}
+
+a{
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.main
+{
+  margin-top: 6.5rem;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  filter: drop-shadow(-10px 6px 3px rgba(0, 119, 255, 0.208));
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+ .main::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -100rem;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  clip-path: circle(50% at 50% 50%);
+  background: url(/image/layout.jpg) center center;
+  background-size: cover;
+} 
+
+@media only screen and (min-width: 56.25em) {
+  .main::after{
+    right: -50rem;
   }
-  body {
-    color: white;
-    background: black;
-  }
+  
+} /* 900px */
+
+.container {
+  padding: 2rem;
 }
