--- a/components/inicio/inicio.module.css
+++ b/components/inicio/inicio.module.css
@@ -1,40 +1,21 @@
-.overlay_main{
-  content: "";
-  position: absolute;
-  top: 0;
-  right: -100rem;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  clip-path: circle(50% at 50% 50%);
-  background: #000046;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  opacity: 0.3;
-}
-
-@media only screen and (min-width: 56.25em) {
-    .overlay_main{
-    right: -50rem;
-  }
-  
-} /* 900px */
-
 .title{
   color: var(--blue);
   font-weight: bold;
-  font-size: 10rem;
-  align-self: flex-start;
-  z-index: 99999;
+  font-size: 62px;
+  margin-bottom: 0.5rem;
   width: 100%;
   text-transform: uppercase;
+  font-weight: 700;
+  animation: 2s moveInBottom;
 }
 
 .paragraph{
-  color: var(--black);
-  align-self: flex-start;
-  width: 100%;
-  font-size: 2.5rem;
+  color:var(--blue);
+  width: 80%;
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+  font-weight: 300;
+  animation: 2s moveInBottom;
 }
 
 @media only screen and (min-width: 56.25em) {
@@ -43,7 +24,89 @@
   }
 
   .title{
-    width: 45%;
+    width: 60%;
   }
 
 } /* 900px */
+
+.text-box {
+  margin-left: 44vw;
+  margin-top: 42vh;
+}
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all 0.2s;
+  position: absolute;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn_white {
+  background-color: var(--blue);
+  color: var(--white-light);
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.btn_white::after {
+  background-color: var(--blue);
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn_animate {
+  -webkit-animation: moveInBottom 5s ease-out;
+          animation: moveInBottom 5s ease-out;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+@-webkit-keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
