--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap');
 
 :root{
   --green:#27ae60;
@@ -19,9 +19,30 @@
   box-sizing: inherit;
 }
 
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes moveInLeft {
+  0% {
+    transform: translateX(-30rem);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
 html {
   font-size: 62.5%; /* 1 rem = 10px; 10px/16px = 62.5% */
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   overflow-x: hidden;
   scroll-padding-top: 5.5rem;
   scroll-behavior: smooth;
@@ -65,34 +86,35 @@ a{
 {
   margin-top: 6.5rem;
   width: 100%;
-  height: 100vh;
+  height: 92vh;
   overflow: hidden;
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  filter: drop-shadow(-10px 6px 3px rgba(0, 119, 255, 0.208));
+  position: relative;
 }
 
- .main::after{
+.main::after
+{
   content: "";
   position: absolute;
-  top: 0;
-  right: -100rem;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+  top: 10rem;
+  right: 0;
+  width: 40%;
+  height: 60%;
   clip-path: circle(50% at 50% 50%);
-  background: url(/image/layout.jpg) center center;
+  background: url(/image/hero.png) center center;
   background-size: cover;
-} 
+  filter: drop-shadow(0 0 1rem rgba(2, 105, 232, 0.5));
+  opacity: 0;
+}
 
 @media only screen and (min-width: 56.25em) {
   .main::after{
-    right: -50rem;
+    opacity: 1;
   }
-  
 } /* 900px */
 
 .container {
