--- a/components/layout/header/header.module.css
+++ b/components/layout/header/header.module.css
@@ -81,7 +81,8 @@
     transform: scale(1) translate(-10px, -70px);
 }
 
-.header .icons i,
+
+.header .icons .i,
 .header .icons a{
     cursor: pointer;
     margin-left: .5rem;
@@ -94,7 +95,7 @@
     border-radius: 50%;
 }
 
-.header .icons i:hover,
+.header .icons .i:hover,
 .header .icons a:hover{
     color:#fff;
     background: var(--blue);
