--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,10 @@
 
 :root{
   --green:#27ae60;
+  --red: #c0392b;
   --black:#192a56;
   --blue:rgb(11, 102, 222);
-  --light-color:rgb(252, 252, 252);
+  --light-color:rgb(247, 247, 247);
   --white:#e6e6e6;
   --white-light:#fff;
   --box-shadow:0 .5rem 1.5rem rgba(0,0,0,.1);
@@ -101,5 +102,45 @@ a{
   padding: 2rem;
 }
 
-/**/
+.custom_btn {
+  outline: none;
+  height: 40px;
+  text-align: center;
+  width: 130px;
+  border-radius: 40px;
+  border: 2px solid var(--red);
+  color: var(--red);
+  letter-spacing: 1px;
+  text-shadow: 0;
+  font-size: 12px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.25s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.custom_btn:hover {
+  background: var(--red);
+}
+.custom_btn:active {
+  letter-spacing: 2px;
+}
 
+@-webkit-keyframes rotating {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotating {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
