--- a/components/layout/header/shoping/shopping.module.css
+++ b/components/layout/header/shoping/shopping.module.css
@@ -9,10 +9,11 @@
     background-color: rgba(0,0,0,.7);
     display: flex;
     justify-content: end;
+    transition: 250ms ease-in-out;
 }
 
 .hidden{
-    visibility:hidden;
+   left: -200rem;
 }
 
 .shoping{
@@ -30,8 +31,9 @@
     align-items: center;
     margin-bottom: 1rem;
     padding: 1rem 0;
-    border-bottom: 1px solid var(--white);
+    border-bottom: 2px solid var(--white);
 }
+
 .shoping_header h4{
     font-size: 2rem;
 }
@@ -49,45 +51,24 @@
     margin: 0 1rem;
 }
 
-.shoping_item{
+.shopping_footer{
+    width: 35rem;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 1rem;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    border-top:  2px solid var(--white);
 }
 
-.shoping_item_img{
-    width: 10rem;
-}
-
-.shoping_item_img img {
+.btn_color_shopping{
     width: 100%;
-    height: 100%;
-    object-fit: fill;
+    height: 4rem;
+    background-color: var(--green);
 }
 
-.shoping_content{
-    width: 17rem;
-    display: flex;
-    flex-direction: column;
-
-}
-
-.shoping_content h4{
-    font-size: 1.2rem;
-}
-
-.shoping_content p{
-    color: var(--green);
-}
-
-.shoping_icons{
-    width: 3rem;
-}
-
-.shoping_icons button{
-    border: none;
-    background-color: var(--red);
-    color: var(--white-light);
-    padding: .5rem;
-    border-radius: 0.2rem;
+.btn_color_shopping:before{
+    background-color: var(--green-light); 
 }
