--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 
 :root{
   --green:#27ae60;
+  --green-light: #266440;
   --red: #c0392b;
   --black:#192a56;
   --blue:rgb(11, 102, 222);
@@ -101,7 +102,7 @@ a{
 .container {
   padding: 2rem;
 }
-
+ /* button 1 */
 .custom_btn {
   outline: none;
   height: 40px;
@@ -143,4 +144,55 @@ a{
   to {
     transform: rotate(360deg);
   }
+}
+
+/* button 2 */
+
+.custom_btn_2 {
+  cursor: pointer;
+  display: inline-block;
+  padding: 0.75rem 1.25rem;
+  border: none;
+  border-radius: 10rem;
+  outline: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 0.15rem;
+  transition: all 0.3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.custom_btn_2:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: #0cf; */
+  border-radius: 10rem;
+  z-index: -2;
+}
+
+.custom_btn_2:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  transition: all 0.3s;
+  border-radius: 10rem;
+  z-index: -1;
+}
+
+.custom_btn_2:hover {
+  color: #fff;
+}
+
+.custom_btn_2:hover:before {
+  width: 100%;
 }
