--- a/components/layout/header/header.module.css
+++ b/components/layout/header/header.module.css
@@ -20,7 +20,7 @@
     color:var(--blue);
 }
 
-.header .navbar a {
+.header .navbar .a {
     position: relative;
     border: none;
     font-size: 1.5rem;
@@ -35,19 +35,19 @@
     overflow: hidden;
     box-shadow: none;
 }
-.header .navbar a:active {
+.header .navbar .a:active {
     transform: translateY(3px);
 }
 
-.header .navbar a.active{
+.header .navbar .a.active{
     color: var(--blue);
 }
 
-.header .navbar a:hover {
+.header .navbar .a:hover {
     color: var(--white-light);
 }
 
-.header .navbar a::before {
+.header .navbar .a::before {
     content: "";
     position: absolute;
     top: 0;
@@ -56,10 +56,10 @@
     height: 100%;
     transition: opacity 0.3s, border 0.3s;
 }
-.header .navbar a:hover::before {
+.header .navbar .a:hover::before {
     opacity: 0;
 }
-.header .navbar a::after {
+.header .navbar .a::after {
     content: "";
     position: absolute;
     top: 0;
@@ -75,7 +75,7 @@
     transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
 }
 
-.header .navbar a:hover::after {
+.header .navbar .a:hover::after {
     opacity: 1;
     transform-origin: 100px 100px;
     transform: scale(1) translate(-10px, -70px);
@@ -83,7 +83,7 @@
 
 
 .header .icons .i,
-.header .icons a{
+.header .icons .a{
     cursor: pointer;
     margin-left: .5rem;
     height:4.5rem;
@@ -96,7 +96,7 @@
 }
 
 .header .icons .i:hover,
-.header .icons a:hover{
+.header .icons .a:hover{
     color:#fff;
     background: var(--blue);
     transform: rotate(360deg);
@@ -133,7 +133,7 @@
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     }
 
-    .header .navbar a{
+    .header .navbar .a{
         display: block;
         padding:1.5rem;
         margin:1rem;
@@ -141,7 +141,7 @@
         background:#eee;
     }
 
-    .header .navbar a:hover {
+    .header .navbar .a:hover {
         color: #e6e6e6;
         background-color: var(--blue);
       }
