--- a/components/layout/header/shoping/item/shoppingItem.module.css
+++ b/components/layout/header/shoping/item/shoppingItem.module.css
@@ -40,6 +40,7 @@
 }
 
 .shoping_icons button{
+    cursor: pointer;
     border: none;
     background-color: var(--red);
     color: var(--white-light);
