se agrego login para usuarios

--- a/components/layout/header/header.module.css
+++ b/components/layout/header/header.module.css
@@ -142,7 +142,7 @@
     }
 
     .header .navbar .a:hover {
-        color: #e6e6e6;
+        color: var(--white);
         background-color: var(--blue);
       }
 
