--- a/components/layout/header/shoping/shopping.module.css
+++ b/components/layout/header/shoping/shopping.module.css
@@ -8,7 +8,7 @@
     left: 0;
     background-color: rgba(0,0,0,.7);
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     transition: 250ms ease-in-out;
 }
 
