--- a/components/autenticacion/login/login.module.css
+++ b/components/autenticacion/login/login.module.css
@@ -27,7 +27,7 @@
     width: 100%;
     height: 100%;
     border-radius: 0.5rem;
-    clip-path: polygon(0 0, 0 54%, 84% 0);
+    clip-path: polygon(0 0, 0 51%, 100% 0);
     background: var(--blue);
 }
 
@@ -75,22 +75,33 @@
 }
 
 .form_item{
-    margin-bottom: 1.2rem;
+    margin-bottom: 1.4rem;
     display: flex;
     flex-direction: column;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
+
 .form_item label{
     margin-bottom: 0.2rem;
 }
+
 .form_item_input{
     border: 1px solid var(--white);
-    border-radius: 0.5rem;
+    border-radius: 1rem;
     padding: 1rem;
     width: 28rem;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     outline: none;
+    height: 5rem;
 }
+
+
+@media only screen and (min-width: 37.5em) {
+    .form_item, .form_item_input{
+        font-size: 1.6rem;
+    }
+    } /* 600px */
+
 
 .btn_color_login{
     width: 100%;
@@ -103,7 +114,7 @@
 }
 
 .link{
-    margin-top: 0.5rem;
-    font-size: 1.6rem;
+    margin-top: 1.5rem;
+    font-size: 1.4rem;
     color: var(--blue);
 }
