--- a/components/autenticacion/login/login.module.css
+++ b/components/autenticacion/login/login.module.css
@@ -27,7 +27,8 @@
     width: 100%;
     height: 100%;
     border-radius: 0.5rem;
-    clip-path: polygon(0 0, 0 51%, 100% 0);
+    clip-path: polygon(0 0, 0 43%, 100% 0);
+    /* clip-path: polygon(0 0, 0 51%, 100% 0); */
     background: var(--blue);
 }
 
@@ -78,7 +79,7 @@
     margin-bottom: 1.4rem;
     display: flex;
     flex-direction: column;
-    font-size: 1.8rem;
+    font-size: 1.9rem;
 }
 
 .form_item label{
@@ -89,10 +90,10 @@
     border: 1px solid var(--white);
     border-radius: 1rem;
     padding: 1rem;
-    width: 28rem;
-    font-size: 1.8rem;
+    width: 30rem;
+    font-size: 1.9rem;
     outline: none;
-    height: 5rem;
+    height: 6rem;
 }
 
 
@@ -100,18 +101,28 @@
     .form_item, .form_item_input{
         font-size: 1.6rem;
     }
+    .form_item_input{
+        height: 4.5rem;
+    }
     } /* 600px */
 
 
 .btn_color_login{
     width: 100%;
-    height: 4rem;
+    height: 6rem;
     background-color: var(--blue);
 }
 
 .btn_color_login:before{
     background-color: var(--black);
 }
+
+@media only screen and (min-width: 37.5em) {
+    .btn_color_login{
+        height: 4rem;
+    }
+    } /* 600px */
+
 
 .link{
     margin-top: 1.5rem;
