--- a/components/menu/platillos/platillo/platillo.module.css
+++ b/components/menu/platillos/platillo/platillo.module.css
@@ -2,20 +2,18 @@
 .blog_slider {
     width: 95%;
     position: relative;
-    max-width: 800px;
-    margin: auto;
+    max-width: 400px;
     background: #fff;
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
     padding: 25px;
     border-radius: 25px;
-    height: 290px;
+    height: 250px;
     transition: all 0.3s;
     margin-bottom: 1.5rem;
   }
  
   @media screen and (max-width: 768px) {
     .blog_slider {
-    
       height: auto;
       margin: 60px auto;
     }
@@ -25,7 +23,7 @@
       height: 350px;
     }
   }
-  
+
   .blog_slider__item {
     display: flex;
     align-items: center;
@@ -35,17 +33,20 @@
       flex-direction: column;
     }
   }
-  
+
   .blog_slider__img {
-    width: 220px;
+    width: 200px;
     flex-shrink: 0;
     height: 200px;
     padding: 1.5rem;
-    background-image: linear-gradient(147deg, #0166fe 0%, #06bcf9 74%);
+    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
     box-shadow: 4px 13px 30px 1px rgba(36, 135, 255, 0.331);
     border-radius: 20px;
     transform: translateX(-80px);
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .blog_slider__img img {
@@ -69,26 +70,42 @@
       height: 270px;
     }
   }
-  
+
   .blog_slider__content {
+    position: absolute;
     padding-right: 25px;
+    width: 20rem;
+    right: 0;
   }
+
+  @media screen and (max-width: 1290px) {
+    .blog_slider__content {
+     right: 4rem;
+    }
+  }
+
   @media screen and (max-width: 768px) {
     .blog_slider__content {
       margin-top: -80px;
       text-align: center;
       padding: 0 30px;
+      bottom: 0;
+      right: 0;
+      width: 100%;
     }
   }
   @media screen and (max-width: 576px) {
     .blog_slider__content {
       padding: 0;
+      bottom: 0;
+      width: 100%;
+      right: 0;
     }
   }
   
   .blog_slider__title {
-    margin-top: 2rem;
-    font-size: 24px;
+    margin-top: 0rem;
+    font-size: 1.3rem;
     font-weight: 700;
     color:var(--black);
     margin-bottom: 20px;
@@ -96,9 +113,23 @@
 
   .blog_slider__text {
     color:var(--black);
-    font-size: 1.2rem;
-    margin-bottom: 30px;
+    font-size: 1rem;
+    margin-bottom: 1rem;
     line-height: 1.5em;
   }
  
-  
+  .btn_color_shopping{
+    width: 10rem;
+    height: 3.5rem;
+    font-size: 1rem;
+    background-color: var(--blue);
+}
+
+.btn_color_shopping:before{
+    background-color: var(--green-light); 
+}
+
+.blog_slider__price{
+  color: var(--green);
+  font-weight: bold;
+}
