--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,13 +64,20 @@ a{
   text-decoration: none;
 }
 
-.main
-{
+ul{
+  list-style: none;
+}
+
+.main, .main_normal {
   margin-top: 6.5rem;
   width: 100%;
   height: 92vh;
   overflow: hidden;
   position: relative;
+}
+
+.main
+{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
