--- a/components/layout/header/shoping/shopping.module.css
+++ b/components/layout/header/shoping/shopping.module.css
@@ -1,9 +1,9 @@
 .shoping_bg
 {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100vh;
-    z-index: 3;
+    z-index: 99;
     top: 0;
     left: 0;
     background-color: rgba(0,0,0,.7);
