--- a/styles/globals.css
+++ b/styles/globals.css
@@ -177,3 +177,15 @@ ul{
 .custom_btn_2:hover:before {
   width: 100%;
 }
+
+.alert{
+  width: 100%;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.alert-danger{
+  color: var(--white-light);
+  background-color: var(--red);
+}
