--- a/components/layout/header/shoping/shopping.module.css
+++ b/components/layout/header/shoping/shopping.module.css
@@ -58,9 +58,24 @@
     right: 0;
     padding: 1rem;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border-top:  2px solid var(--white);
+}
+
+.shopping_footer_content{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 1rem;
+}
+
+.shopping_footer_content_paragraph{
+    font-weight: bold;
+    font-size: 1.2rem;
+    text-transform: uppercase;
 }
 
 .btn_color_shopping{
